# streamcloak-api

./: .env.example  .gitignore  README.md  pyproject.toml
src/app/: main.py
src/app/api/: api_v1.py  auth.py  health.py
src/app/auth/: dependencies.py  router.py  schemas.py
src/app/clients/: router.py  schemas.py  service.py
src/app/core/: config.py  constants.py  dependencies.py  logger.py  security.py  utils.py
src/app/dashboard/: router.py  schemas.py
src/app/device/: router.py  schemas.py  service.py
src/app/iptv/: router.py  schemas.py  service.py
src/app/maintenance/: router.py  schemas.py  service.py
src/app/pihole/: client.py  dependencies.py  router.py  schemas.py  service.py
src/app/setup_status/: router.py  schemas.py  service.py
src/app/vpn/: services.py
src/app/vpn/exceptions/: router.py  schemas.py  service.py
src/app/vpn/openvpn/: router.py  schemas.py  service.py
src/app/vpn/providers/: base.py  router.py  schemas.py  service.py  tasks.py
src/app/vpn/providers/cyberghost/: servers.json  service.py
src/app/wifi/: router.py  schemas.py  service.py
